# IOTA-SC-DID-manager

./: .gitignore  Cli_wallet.sh  Compile_SM.md  DID_doc.md  DID_ref.md  Deploy_ISC.md  Hornet_cmd.sh  ISC_interaction.md  Projet_info.md  README.md  Rust_SC.rs  Setup_predefined_dev_env.sh  Wasp_install.sh  projet.md  test.sh
contracts/DID_append/: Cargo.toml
contracts/DID_append/src/: lib.rs  main.rs
contracts/DID_append/src/did_append_contract/: schema.yaml
contracts/DID_append/src/did_append_contract/rs/did_append_contract/: Cargo.toml  README.md
contracts/DID_append/src/did_append_contract/rs/did_append_contract/src/: consts.rs  contract.rs  params.rs  results.rs  state.rs
contracts/DID_append/src/did_append_contract/rs/did_append_contractimpl/: README.md
contracts/DID_append/src/did_append_contract/rs/did_append_contractimpl/src/: funcs.rs
contracts/did_append_contract/: schema.yaml
contracts/did_append_contract/rs/did_append_contract/: Cargo.toml
contracts/did_append_contract/rs/did_append_contract/src/: consts.rs  contract.rs  params.rs  results.rs
contracts/did_append_contract/rs/did_append_contractimpl/: Cargo.toml
contracts/did_append_contract/rs/did_append_contractimpl/src/: funcs.rs  thunks.rs
contracts/did_append_contract/rs/did_append_contractwasm/: Cargo.toml  README.md
contracts/did_append_contract/test/: did_append_contract_test.go
contracts/did_test/: Cargo.toml
contracts/test_sm/: Cargo.toml
contracts/test_sm/src/: lib.rs
did_append_contract/: schema.yaml
did_append_contract/rs/did_append_contract/src/: consts.rs
did_append_contract/rs/did_append_contractimpl/src/: thunks.rs
did_append_contract/rs/did_append_contractwasm/: Cargo.toml
did_append_contract/rs/did_append_contractwasm/src/: lib.rs
did_append_contract/test/: did_append_contract_test.go
did_src/: Cargo.toml  did-strong.hodl
did_src/src/: create_did.rs  lib.rs  main.rs
scripts/: DID_manager.sh  README.md  Setup_predefined_dev_env.sh  Wasp_install.sh  create_did.sh  hornet_install.sh  wasp-cli.json
