[package]
name = "did_src"
version = "0.1.0"
edition = "2021"

[lib]
name = "did_src"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "did_src"
path = "src/main.rs"

[dependencies]
identity_iota = "0.6.1"
iota-client = { version = "2.0.1-rc", default-features = false, features = ["tls", "stronghold"] }
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

