[package]
name = "DID_append"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmlib = { git = "https://github.com/iotaledger/wasp", rev = "05516ca" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
serde_json = "1.0.85"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
