# Copyright 2020 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

[package]
name = "did_append_contractwasm"
description = "Wasm VM host stub for: did_append_contract description"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Ilias El Abbassi <iliaselabbassi@outlook.fr>"]
edition = "2021"
repository = "https://github.com/iotaledger/wasp"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
did_append_contractimpl = { path = "../did_append_contractimpl" }
wasmvmhost = { git = "https://github.com/iotaledger/wasp", branch = "wasmclient" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
