# Copyright 2020 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

[package]
name = "did_append_contract"
description = "Interface library for: did_append_contract description"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Ilias El Abbassi <iliaselabbassi@outlook.fr>"]
edition = "2021"
repository = "https://github.com/iotaledger/wasp"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasmlib = { git = "https://github.com/iotaledger/wasp", branch = "wasmclient" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
